"""Test cases which should fail to build are marked with `tags = ["manual"]`."""

load("//lang/cc:defs.bzl", "cc_build_error")
load("//matcher:defs.bzl", "matcher")

cc_build_error(
    name = "plain",
    src = "cpp_successful_build.cpp",
    tags = ["manual"],
)

cc_build_error(
    name = "with_substr_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.has_substr("for cpp_successful_build.cpp"),
    tags = ["manual"],
)

cc_build_error(
    name = "with_substr_matcher_ignoring_case",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.has_substr_ignoring_case("FOR cpp_successful_build.cpp"),
    tags = ["manual"],
)

cc_build_error(
    name = "with_basic_regex_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.contains_basic_regex(r"for[[:space:]]cpp_successful_build\.\(cpp\|cxx\)"),
    tags = ["manual"],
)

cc_build_error(
    name = "with_extended_regex_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.contains_extended_regex(r"for[[:space:]]cpp_successful_build\.(cpp|cxx)"),
    tags = ["manual"],
)
