"""Test cases which should fail to build are marked with `tags = ["manual"]`."""

load("//matcher:defs.bzl", "matcher")
load("//tests/cc:utils.bzl", "check_build_and_test")

check_build_and_test(
    name = "plain",
    src = "cpp_successful_build.cpp",
    tags = ["manual"],
)

check_build_and_test(
    name = "with_substr_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.has_substr("for cpp_successful_build.cpp"),
    tags = ["manual"],
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.contains_basic_regex(r"for[[:space:]]cpp_successful_build\.\(cpp\|cxx\)"),
    tags = ["manual"],
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "cpp_successful_build.cpp",
    compile_stderr = matcher.contains_extended_regex(r"for[[:space:]]cpp_successful_build\.(cpp|cxx)"),
    tags = ["manual"],
)
