"""Test cases which should fail to build are marked with `tags = ["manual"]`."""

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//matcher:defs.bzl", "matcher")
load("//tests/cc:utils.bzl", "check_build_and_test")

cc_library(
    name = "library",
    srcs = ["library.cpp"],
    hdrs = ["library.hpp"],
    tags = ["manual"],
)

check_build_and_test(
    name = "plain",
    src = "cpp_compile_error.cpp",
    tags = ["manual"],
    deps = [":library"],
)

check_build_and_test(
    name = "with_substr_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.has_substr("requires single argument"),
    tags = ["manual"],
    deps = [":library"],
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.contains_basic_regex("requires single argument.*argument"),
    tags = ["manual"],
    deps = [":library"],
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "cpp_compile_error.cpp",
    compile_stderr = matcher.contains_extended_regex("requires single argument.*argument"),
    tags = ["manual"],
    deps = [":library"],
)
