load(
    "@rules_build_error//lang/cc:defs.bzl",
    "cc_build_error_test",
    "inline_src",
)
load("@rules_build_error//matcher:defs.bzl", "matcher")

cc_build_error_test(
    name = "compile_error_test_with_inline_c_non_windows",
    src = inline_src.c("""
    #include <assert.h>

    int main(void) {
        static_assert(0, "Compile error message for inline src");
        return 0;
    }
    """),
    compile_stderr = matcher.has_substr("static assertion failed"),
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//os:macos",
    ],
)

cc_build_error_test(
    name = "compile_error_test_with_inline_cpp_non_windows",
    src = inline_src.cpp("""
    constexpr bool Predicate() noexcept { return false; }

    int main() {
        static_assert(Predicate(), "Compile error message for inline src");
        return 0;
    }
    """),
    compile_stderr = matcher.has_substr("static assertion failed"),
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//os:macos",
    ],
)

# NOTE: VC++ (cl.exe) on Windows outputs static_assert failures to stdout, not stderr.

cc_build_error_test(
    name = "compile_error_test_with_inline_c_windows",
    src = inline_src.c("""
    #include <assert.h>

    int main(void) {
        static_assert(0, "Compile error message for inline src");
        return 0;
    }
    """),
    compile_stdout = matcher.has_substr("static_assert failed"),
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)

cc_build_error_test(
    name = "compile_error_test_with_inline_cpp_windows",
    src = inline_src.cpp("""
    constexpr bool Predicate() noexcept { return false; }

    int main() {
        static_assert(Predicate(), "Compile error message for inline src");
        return 0;
    }
    """),
    compile_stdout = matcher.has_substr("static_assert failed"),
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)
