load(
    "@rules_build_error//lang/cc:defs.bzl",
    "cc_build_error_test",
    "inline_src",
)
load("@rules_build_error//matcher:defs.bzl", "matcher")

cc_build_error_test(
    name = "compile_error_test_with_inline_cpp_non_windows",
    src = inline_src.cpp("""
    #include <foo/bar.hpp>

    int main() {
        static_assert(::foo::Bar(), "If ::foo::Bar() is correctly declared, this will fail");
        return 0;
    }
    """),
    compile_stderr = matcher.has_substr("static assertion failed"),
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        # NOTE: Skip the test on Windows because VC++ (cl.exe) on Windows does not support external include paths.
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@external_library",
    ],
)
