"""Verifies the usage with `local_config_cc` combined with the `external_include_paths` feature.

Based on https://github.com/yuyawk/rules_build_error/issues/145.
"""

module(
    name = "test_module",
    version = "0.0.0",
)

bazel_dep(name = "rules_build_error", version = "0.0.0")
local_path_override(
    module_name = "rules_build_error",
    path = "../../..",
)

bazel_dep(name = "external_library", version = "0.0.0")
local_path_override(
    module_name = "external_library",
    path = "external_library",
)

bazel_dep(name = "platforms", version = "1.0.0")
