load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//matcher:defs.bzl", "matcher")
load("//tests/unit/cc:utils.bzl", "check_build_and_test")

check_build_and_test(
    name = "with_substr_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("The target platform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

check_build_and_test(
    name = "with_basic_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_basic_regex(r"The[[:space:]]target \(p\|P\)latform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

check_build_and_test(
    name = "with_extended_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_extended_regex("The[[:space:]]target (p|P)latform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

build_test(
    name = "build_test",
    targets = [
        ":with_substr_matcher",
        ":with_basic_regex_matcher",
        ":with_extended_regex_matcher",
    ],
)

# Test case which should fail to build
check_build_and_test(
    name = "incorrect_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("The target platform is " + select({
        "@platforms//os:linux": "Windows",
        "@platforms//os:windows": "macOS",
        "@platforms//os:macos": "linux",
        "//conditions:default": "well-known",
    })),
    tags = ["manual"],
)
