load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//matcher:defs.bzl", "matcher")
load("//tests/unit/cc:utils.bzl", "check_build_and_test")

check_build_and_test(
    name = "select_inside_substr_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("The target platform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

check_build_and_test(
    name = "select_inside_basic_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_basic_regex(r"The[[:space:]]target \(p\|P\)latform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

check_build_and_test(
    name = "select_inside_extended_regex_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.contains_extended_regex("The[[:space:]]target (p|P)latform is " + select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "Windows",
        "@platforms//os:macos": "macOS",
        "//conditions:default": "unknown",
    })),
)

check_build_and_test(
    name = "select_outside_matchers",
    src = "c_compile_error.c",
    compile_stderr = select({
        "@platforms//os:linux": matcher.has_substr("The target platform is linux"),
        "@platforms//os:windows": matcher.contains_basic_regex(r"The[[:space:]]target \(p\|P\)latform is Windows"),
        "@platforms//os:macos": matcher.contains_extended_regex("The[[:space:]]target (p|P)latform is macOS"),
        "//conditions:default": matcher.has_substr("The target platform is unknown"),
    }),
)

build_test(
    name = "build_test",
    targets = [
        ":select_inside_substr_matcher",
        ":select_inside_basic_regex_matcher",
        ":select_inside_extended_regex_matcher",
        ":select_outside_matchers",
    ],
)

# Test case which should fail to build
check_build_and_test(
    name = "incorrect_select_inside_matcher",
    src = "c_compile_error.c",
    compile_stderr = matcher.has_substr("The target platform is " + select({
        "@platforms//os:linux": "Windows",
        "@platforms//os:windows": "macOS",
        "@platforms//os:macos": "linux",
        "//conditions:default": "well-known",
    })),
    tags = ["manual"],
)

# Test case which should fail to build
check_build_and_test(
    name = "incorrect_select_outside_matcher",
    src = "c_compile_error.c",
    compile_stderr = select({
        "@platforms//os:linux": matcher.has_substr("The target platform is Windows"),
        "@platforms//os:windows": matcher.contains_basic_regex(r"The[[:space:]]target \(p\|P\)latform is macOS"),
        "@platforms//os:macos": matcher.contains_extended_regex("The[[:space:]]target (p|P)latform is linux"),
        "//conditions:default": matcher.has_substr("The target platform is well-known"),
    }),
    tags = ["manual"],
)
